[gd_scene load_steps=5 format=3 uid="uid://2acxkwopwlig"]

[ext_resource type="Script" path="res://ListingInputs/listing_inputs.gd" id="1_f86qv"]
[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="2_fn6tm"]
[ext_resource type="Theme" uid="uid://duwhg5ak6t7nt" path="res://UI/Themes/my_option_button_theme.tres" id="3_lie0f"]
[ext_resource type="Theme" uid="uid://cepf0eeqt2mpk" path="res://UI/Themes/my_spinbox_theme.tres" id="4_tn1ug"]

[node name="ListingInputs" type="Control"]
layout_mode = 3
anchor_right = 0.807
anchor_bottom = 0.056
offset_right = 0.559937
offset_bottom = -0.480003
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f86qv")

[node name="ListingContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.992
anchor_bottom = 1.0
offset_right = -1497.6
offset_bottom = -20.0
theme_override_constants/separation = 20

[node name="TheatreContainer" type="HBoxContainer" parent="ListingContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TheatreLabel" type="Label" parent="ListingContainer/TheatreContainer"]
layout_mode = 2
theme = ExtResource("2_fn6tm")
text = "Theatre:"

[node name="TheatreSelectButton" type="OptionButton" parent="ListingContainer/TheatreContainer"]
layout_mode = 2
theme = ExtResource("3_lie0f")
theme_override_colors/font_hover_color = Color(0, 0.196078, 0.196078, 1)
item_count = 9
popup/item_0/text = "Hamilton"
popup/item_0/id = 0
popup/item_1/text = "Oxford Valley"
popup/item_1/id = 1
popup/item_2/text = "Burlington"
popup/item_2/id = 2
popup/item_3/text = "UA Grant Plaza 9"
popup/item_3/id = 3
popup/item_4/text = "Commerce Center Stm 18 & RPX"
popup/item_4/id = 4
popup/item_5/text = "Warrington Stadium 22 & IMAX"
popup/item_5/id = 5
popup/item_6/text = "Moorestown Mall Stm 12 & RPX"
popup/item_6/id = 6
popup/item_7/text = "UA MAIN Street Theatre 6"
popup/item_7/id = 7
popup/item_8/text = "Hadlet Thatre Stadium 16"
popup/item_8/id = 8

[node name="StartTimeContainer" type="HBoxContainer" parent="ListingContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartTimeLabel" type="Label" parent="ListingContainer/StartTimeContainer"]
layout_mode = 2
theme = ExtResource("2_fn6tm")
text = "Start Time:"

[node name="StartHour" type="SpinBox" parent="ListingContainer/StartTimeContainer"]
layout_mode = 2
theme = ExtResource("4_tn1ug")
min_value = 1.0
max_value = 12.0
value = 1.0
alignment = 2

[node name="Simicolon" type="Label" parent="ListingContainer/StartTimeContainer"]
layout_mode = 2
theme = ExtResource("2_fn6tm")
text = ":"

[node name="StartMinute" type="SpinBox" parent="ListingContainer/StartTimeContainer"]
layout_mode = 2
theme = ExtResource("4_tn1ug")
max_value = 60.0
step = 15.0

[node name="AmPmButton" type="OptionButton" parent="ListingContainer/StartTimeContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "AM"
popup/item_0/id = 0
popup/item_1/text = "PM"
popup/item_1/id = 1

[node name="RunTimeContainer" type="BoxContainer" parent="ListingContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RunTimeLabel" type="Label" parent="ListingContainer/RunTimeContainer"]
layout_mode = 2
theme = ExtResource("2_fn6tm")
text = "Run Time:"

[node name="Hour" type="SpinBox" parent="ListingContainer/RunTimeContainer"]
layout_mode = 2
theme = ExtResource("4_tn1ug")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="Simicolon" type="Label" parent="ListingContainer/RunTimeContainer"]
layout_mode = 2
theme = ExtResource("2_fn6tm")
text = ":"

[node name="Minute" type="SpinBox" parent="ListingContainer/RunTimeContainer"]
layout_mode = 2
theme = ExtResource("4_tn1ug")
max_value = 60.0
step = 15.0
